--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
             <div class="projects__grid">
                 <div class="project project__1">
-                    <img class="project__img" src="./images/project1.jpg" alt="image">
+                    <img class="project__img" src="./images/project1.png" alt="image">
                     <div class="project__hover-contents">
                         <h2 class="project__title">Moviefy</h2>
                         <p>JavaScript application to browse for your favorite movies and Tv shows</p>
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <div class="project project__2">
-                    <img class="project__img" src="./images/project2.jpg" alt="image">
+                    <img class="project__img" src="./images/project2.png" alt="image">
                     <div class="project__hover-contents">
                         <h2 class="project__title">PigDice</h2>
                         <p>A simple game created in vanilla JavaScript</p>
@@ -143,7 +143,7 @@
                     </div>
                 </div>
                 <div class="project project__3">
-                    <img class="project__img" src="./images/project3.jpg" alt="image">
+                    <img class="project__img" src="./images/project3.png" alt="image">
                     <div class="project__hover-contents">
                         <h2 class="project__title">Modern Portfolio</h2>
                         <p>A Modern Portfolio created in Vanilla JavaScript</p>
@@ -184,7 +184,7 @@
                 <div class="blog-grid__box blog__1">
                     <a target="_black"
                         href="https://www.codementor.io/@codementorteam/7-secrets-to-staying-motivated-when-learning-to-code-a2dy7hqar"><img
-                            class="blog__image" src="./images/blog1.jpg" alt="image">
+                            class="blog__image" src="./images/blog1.png" alt="image">
                     </a>
                     <h3 class="blog__title">7 secrets to staying motivated when learning to code</h3>
                     <p class="blog__date">Sep 25, 2015</p>
@@ -193,7 +193,7 @@
                 <div class="blog-grid__box blog__2">
                     <a target="_blank"
                         href="https://www.makeuseof.com/tag/creative-effective-tricks-pull-programming-nighter/"><img
-                            class="blog__image" src="./images/blog2.jpg" alt="image">
+                            class="blog__image" src="./images/blog2.png" alt="image">
                     </a>
                     <h3 class="blog__title">How to stay awake while coding</h3>
                     <p class="blog__date">MAY 14, 2014</p>
@@ -203,7 +203,7 @@
                 <div class="blog-grid__box blog__3">
                     <a target="_blank"
                         href="https://www.syncfusion.com/blogs/post/15-best-visual-studio-code-extensions-for-web-developers.aspx"><img
-                            class="blog__image" src="./images/blog3.jpg" alt="image">
+                            class="blog__image" src="./images/blog3.png" alt="image">
                     </a>
                     <h3 class="blog__title">15 Best Visual Studio Code Extensions for Web Developers</h3>
                     <p class="blog__date">June 3, 2020</p>
@@ -211,7 +211,7 @@
                 </div>
                 <div class="blog-grid__box blog__4">
                     <a target="_blank" href="https://jasonbaciulis.com/food-for-programmers/"><img class="blog__image"
-                            src="./images/blog4.jpg" alt="image">
+                            src="./images/blog4.png" alt="image">
                     </a>
                     <h3 class="blog__title">Brain-friendly food for programmers</h3>
                     <p class="blog__date">October 31, 2017</p>
