--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/beaebd9e9b.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./images/icon.png">
     <link rel="stylesheet" href="./css/man.css">
     <title>Portfolio</title>
@@ -29,6 +28,7 @@
     </nav>
     <!-- HEADER -->
     <header id="home" class="header">
+        <img src="./images/background.jpg" alt="img">
         <h1 class="header__font-1">Hello, I'm <span>Berthony Beya</span>.</h1>
         <h1 class="header__font-2">I'm a full-stack web developer.</h1>
         <a href="#about" class="header__btn">View my work <i class="fas fa-arrow-right fa-xs"></i></a>
@@ -148,7 +148,8 @@
                         <h2 class="project__title">Modern Portfolio</h2>
                         <p>A Modern Portfolio created in Vanilla JavaScript</p>
                         <div class="project__links-btn">
-                            <a target="_blank" href="https://berthonyportfolio.netlify.app/" class="project__link">APP</a>
+                            <a target="_blank" href="https://berthonyportfolio.netlify.app/"
+                                class="project__link">APP</a>
                             <a target="_black" href="https://github.com/BerthonyBeya/Portfolio"
                                 class="project__link">GITHUB</a>
                         </div>
@@ -252,6 +253,7 @@
         <p class="developer">Berthony Beya <span> &copy; 2020</span></p>
     </footer>
 
+    <script src="https://kit.fontawesome.com/beaebd9e9b.js" crossorigin="anonymous"></script>
     <script src="./js/lib/anime/anime.min.js"></script>
     <script src="./js/lib/scrollout/scroll-out.min.js"></script>
     <script src="./js//lib/scrollspy/vanillajs-scrollspy.min.js"></script>
