--- a/index.html
+++ b/index.html
@@ -120,11 +120,13 @@
                 <div class="project project__1">
                     <img class="project__img" src="./images/project1.png" alt="image">
                     <div class="project__hover-contents">
-                        <h2 class="project__title">Moviefy</h2>
-                        <p>JavaScript application to browse for your favorite movies and Tv shows</p>
+                        <h2 class="project__title">Moviefy100</h2>
+                        <p>A React app to browse for your favorite movies and Tv shows.
+                            Using async JavaScript and fetching data from an API.
+                        </p>
                         <div class="project__links-btn">
-                            <a target="_blank" href="https://moviefy1.netlify.app/" class="project__link">APP</a>
-                            <a target="_blank" href="https://github.com/BerthonyBeya/Moviefy"
+                            <a target="_blank" href="https://moviefy100.herokuapp.com/" class="project__link">APP</a>
+                            <a target="_blank" href="https://github.com/BerthonyBeya/Moviefy100"
                                 class="project__link">GITHUB</a>
                         </div>
                     </div>
@@ -133,7 +135,7 @@
                     <img class="project__img" src="./images/project2.png" alt="image">
                     <div class="project__hover-contents">
                         <h2 class="project__title">PigDice</h2>
-                        <p>A simple game created in vanilla JavaScript</p>
+                        <p>A game coded in HTML5, CCS3 and vanilla JavaScript</p>
                         <div class="project__links-btn">
                             <a target="_blank" href="https://pigdice111.netlify.app/" class="project__link">APP</a>
                             <a target="_black" href="https://github.com/BerthonyBeya/PigDice"
@@ -144,8 +146,8 @@
                 <div class="project project__3">
                     <img class="project__img" src="./images/project3.png" alt="image">
                     <div class="project__hover-contents">
-                        <h2 class="project__title">Modern Portfolio</h2>
-                        <p>A Modern Portfolio created in Vanilla JavaScript</p>
+                        <h2 class="project__title">My personal portfolio</h2>
+                        <p>A Portfolio coded in HTML5, CSS3, Sass and vanilla JavaScript</p>
                         <div class="project__links-btn">
                             <a target="_blank" href="https://berthonyportfolio.netlify.app/"
                                 class="project__link">APP</a>
