--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./images/icon.png" />
-    <link rel="stylesheet" href="./css/man.css" />
+    <link rel="stylesheet" href="./sass/man.css" />
     <title>Portfolio</title>
   </head>
 
@@ -61,7 +61,7 @@
             <div class="hexagon"><i class="far fa-lightbulb fa-2x"></i></div>
             <h3 class="hexagon__large-font">Intuitive</h3>
             <p class="hexagon__small-font">
-              Strong preference for easy to use. intuitive UI/UX.
+              Strong preference for easy to use and intuitive UI designs.
             </p>
           </div>
           <div class="hexagon__box hexagon__box-4">
@@ -118,7 +118,7 @@
             <div class="skills-container">
               <p class="skills__font">UIDesign</p>
               <div class="skills__fill UI__fill"></div>
-              <p class="skills__percentage">70%</p>
+              <p class="skills__percentage">80%</p>
             </div>
           </div>
         </div>
