--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               <div class="project__links-btn">
                 <a
                   target="_blank"
-                  href="https://moviefy100.herokuapp.com/"
+                  href="https://moviefy100.netlify.app/"
                   class="project__link"
                   >APP</a
                 >
