--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <div class="project project__1">
             <img class="project__img" src="./images/project4.png" alt="image" />
             <div class="project__hover-contents">
-              <h2 class="project__title">Moviefy100</h2>
+              <h2 class="project__title">Friendlybarbershop</h2>
               <p>
                 A brochure barbershop website coded in HTML5, SASS(CSS), and
                 JavaScript
