Moviez19 app added

--- a/index.html
+++ b/index.html
@@ -158,21 +158,21 @@
           <div class="project project__2">
             <img class="project__img" src="./images/project1.png" alt="image" />
             <div class="project__hover-contents">
-              <h2 class="project__title">Moviefy100</h2>
+              <h2 class="project__title">Moviez19</h2>
               <p>
-                A React app to browse for your favorite movies and Tv shows.
-                Using async JavaScript and fetching data from an API.
+                GET information about different MOVIES and TV SHOWS. ( REACT,
+                REDUX )
               </p>
               <div class="project__links-btn">
                 <a
                   target="_blank"
-                  href="https://moviefy100.netlify.app/"
+                  href="https://moviez19.netlify.app/"
                   class="project__link"
                   >APP</a
                 >
                 <a
                   target="_blank"
-                  href="https://github.com/BerthonyBeya/Moviefy100"
+                  href="https://github.com/BerthonyBeya/Moviez_App"
                   class="project__link"
                   >GITHUB</a
                 >
