--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./images/icon.png" />
     <link rel="stylesheet" href="./sass/man.css" />
-    <title>Portfolio</title>
+    <title>Berthony's Portfolio</title>
   </head>
 
   <body>
